--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/tomgrossman/storage-download#readme",
   "dependencies": {
-    "@google-cloud/storage": "^1.2.1",
-    "express": "^4.15.4"
+    "@google-cloud/storage": "~1.7",
+    "express": "~4.16"
   }
 }
